fix(borrow): Service Test